  getUniqueString to be used. Because of this, testtools version 0.9.2 or
  newer is now a dependency to run bzr selftest. Running with versions of
  testtools less than 0.9.2 will cause bzr to error while loading the test
  suite. (Robert Collins)

* The test progress bar no longer distinguishes tests that 'errored' from
  tests that 'failed' - they're all just failures.
  (Martin Pool)

bzr 2.0.4 (not released yet)
############################

:Codename:
:2.0.4: smooth sailing

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* ``bzr annotate`` on another branch with ``-r branch:...`` no longer
  fails with an ``ObjectNotLocked`` error.  (Andrew Bennetts, #496590)

* ``bzr export dir`` now requests all file content as a record stream,
  rather than requsting the file content one file-at-a-time. This can make
  exporting over the network significantly faster (54min => 9min in one
  case). (John Arbash Meinel, #343218)

* ``bzr serve`` no longer slowly leaks memory. The compiled
  ``bzrlib.bencode.Encoder()`` class was using ``__del__`` to cleanup and
  free resources, and it should have been using ``__dealloc__``.
  This will likely have an impact on any other process that is serving for
  an extended period of time.  (John Arbash Meinel, #494406)

* Check for SIGINT (Ctrl-C) and other signals immediately if ``readdir``
  returns ``EINTR`` by calling ``PyErr_CheckSignals``.  This affected the
  optional ``_readdir_pyx`` extension.  (Andrew Bennetts, #495023)

* Give a clearer message if the lockdir disappears after being apparently
  successfully taken.  (Martin Pool, #498378)

* If we fail to open ``~/.bzr.log`` write a clear message to stderr rather
  than using ``warning()``. The log file is opened before logging is set
  up, and it leads to very confusing: 'no handlers for "bzr"' messages for
  users, rather than something nicer.
  (John Arbash Meinel, Barry Warsaw, #503886)
